--- a/index.html
+++ b/index.html
@@ -8,14 +8,13 @@
     body {
       font-family: Arial, sans-serif;
       margin: 0;
-      background: #fff;
       padding: 20px;
+      background: #fff;
       color: #000;
     }
 
     .header {
       text-align: center;
-      margin-bottom: 40px;
     }
 
     .header h1 {
@@ -26,6 +25,7 @@
     .header h2 {
       font-size: 18px;
       font-weight: normal;
+      margin: 5px;
     }
 
     .contact {
@@ -38,7 +38,7 @@
 
     .grid {
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
       gap: 20px;
       margin-top: 40px;
     }
@@ -47,9 +47,9 @@
       border: 1px solid #ccc;
       border-radius: 8px;
       overflow: hidden;
-      box-shadow: 2px 2px 5px rgba(0,0,0,0.1);
       text-align: center;
       transition: transform 0.2s ease;
+      box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.1);
     }
 
     .card:hover {
@@ -68,7 +68,6 @@
       padding: 12px;
       font-weight: bold;
     }
-
   </style>
 </head>
 <body>
@@ -77,7 +76,7 @@
     <h1>Vedant Gabhawala</h1>
     <h2>MS in Mechanical Engineering at Stanford University</h2>
     <h2>BS in Mechanical Engineering at Johns Hopkins University</h2>
-    <p>An aspiring design oriented mechanical engineer seeking to deepen my knowledge in design processes and production.</p>
+    <p>An aspiring design-oriented mechanical engineer seeking to deepen my knowledge in design processes and production.</p>
     <div class="contact">
       <p>📞 +1 410 469 0808</p>
       <p>✉️ gabhawalavedant@gmail.com</p>
@@ -106,7 +105,7 @@
       <div class="card-title">FEA and Card Bending Machine Design</div>
     </div>
     <div class="card">
-      <img src="images/crane.jpg" alt="Mechanics Crane Project">
+      <img src="images/crane.jpg" alt="Mechanics Based Design – Crane Project">
       <div class="card-title">Mechanics Based Design – Crane Project</div>
     </div>
     <div class="card">
@@ -118,10 +117,11 @@
       <div class="card-title">Infrastructure</div>
     </div>
     <div class="card">
-      <img src="images/survey.jpg" alt="Land Surveying">
+      <img src="images/survey.jpg" alt="Professional Land Surveying">
       <div class="card-title">Professional Land Surveying</div>
     </div>
   </div>
 
 </body>
 </html>
+
