--- a/index.html
+++ b/index.html
@@ -38,9 +38,21 @@
 
     .grid {
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      grid-template-columns: repeat(3, 1fr);
       gap: 20px;
       margin-top: 40px;
+    }
+
+    @media (max-width: 900px) {
+      .grid {
+        grid-template-columns: repeat(2, 1fr);
+      }
+    }
+
+    @media (max-width: 600px) {
+      .grid {
+        grid-template-columns: 1fr;
+      }
     }
 
     .card {
@@ -67,6 +79,13 @@
       color: white;
       padding: 12px;
       font-weight: bold;
+      height: 60px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      text-align: center;
+      line-height: 1.2;
+      overflow-wrap: break-word;
     }
   </style>
 </head>
@@ -85,7 +104,7 @@
 
   <div class="grid">
     <div class="card">
-      <img src="images/camera.jpg" alt="360 Underwater Camera System">
+      <img src="camera.jpg" alt="360 Underwater Camera System">
       <div class="card-title">360 Underwater Camera System</div>
     </div>
     <div class="card">
