--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Vedant Gabhawala - Portfolio</title>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;600&display=swap" rel="stylesheet">
   <style>
     body {
-      font-family: Arial, sans-serif;
+      font-family: 'Montserrat', sans-serif;
       margin: 0;
       padding: 20px;
       background: #fff;
-      color: #000;
+      color: #111;
     }
 
     .header {
@@ -19,12 +20,13 @@
 
     .header h1 {
       font-size: 32px;
-      font-weight: bold;
+      font-weight: 600;
+      letter-spacing: 2px;
     }
 
     .header h2 {
       font-size: 18px;
-      font-weight: normal;
+      font-weight: 300;
       margin: 5px;
     }
 
@@ -34,6 +36,7 @@
 
     .contact p {
       margin: 4px 0;
+      font-weight: 300;
     }
 
     .grid {
@@ -56,12 +59,12 @@
     }
 
     .card {
-      border: 1px solid #ccc;
+      background-color: #f5f5f5;
       border-radius: 8px;
       overflow: hidden;
       text-align: center;
       transition: transform 0.2s ease;
-      box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.1);
+      box-shadow: 1px 1px 6px rgba(0, 0, 0, 0.05);
     }
 
     .card:hover {
@@ -78,7 +81,7 @@
       background-color: #4CAF50;
       color: white;
       padding: 12px;
-      font-weight: bold;
+      font-weight: 600;
       height: 60px;
       display: flex;
       align-items: center;
@@ -104,7 +107,7 @@
 
   <div class="grid">
     <div class="card">
-      <img src="camera.jpg" alt="360 Underwater Camera System">
+      <img src="images/camera.jpg" alt="360 Underwater Camera System">
       <div class="card-title">360 Underwater Camera System</div>
     </div>
     <div class="card">
@@ -143,4 +146,3 @@
 
 </body>
 </html>
-
