--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 
   <div class="grid">
     <div class="card">
-      <img src="images/camera.jpg" alt="360 Underwater Camera System">
+      <img src="camera.jpg" alt="360 Underwater Camera System">
       <div class="card-title">360 Underwater Camera System</div>
     </div>
     <div class="card">
