--- a/index.html
+++ b/index.html
@@ -75,10 +75,11 @@
       width: 100%;
       height: 180px;
       object-fit: cover;
+      background-color: #ddd;
     }
 
     .card-title {
-      background-color: #4CAF50;
+      background-color: #A3B18A;  /* Sage green */
       color: white;
       padding: 12px;
       font-weight: 600;
@@ -107,7 +108,7 @@
 
   <div class="grid">
     <div class="card">
-      <img src="camera.jpg" alt="360 Underwater Camera System">
+      <img src="images/camera.jpg" alt="360 Underwater Camera System">
       <div class="card-title">360 Underwater Camera System</div>
     </div>
     <div class="card">
