--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     }
 
     .card-title {
-      background-color: #CED2C0;  /* Sage green */
+      background-color: #9CAF88;  /* Sage green */
       color: white;
       padding: 12px;
       font-weight: 600;
