--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
     }
 
     .card-title {
-      background-color: #89ABE3;  /* Sage green */
-      color: white;
+      background-color: #CED2C0;
+      color: #111;
       padding: 12px;
       font-weight: 600;
       height: 60px;
@@ -107,42 +107,12 @@
   </div>
 
   <div class="grid">
-    <div class="card">
-      <img src="images/camera.jpg" alt="360 Underwater Camera System">
-      <div class="card-title">360 Underwater Camera System</div>
-    </div>
-    <div class="card">
-      <img src="images/soccer.jpg" alt="Mechatronics Soccer Game">
-      <div class="card-title">Mechatronics Soccer Game</div>
-    </div>
-    <div class="card">
-      <img src="images/blinds.jpg" alt="Solar Powered Blinds Operator">
-      <div class="card-title">Solar Powered Blinds Operator</div>
-    </div>
-    <div class="card">
-      <img src="images/heat.jpg" alt="Manufacturing and Heat Transfer">
-      <div class="card-title">Manufacturing and Heat Transfer Projects</div>
-    </div>
-    <div class="card">
-      <img src="images/fea.jpg" alt="FEA and Card Bending Machine Design">
-      <div class="card-title">FEA and Card Bending Machine Design</div>
-    </div>
-    <div class="card">
-      <img src="images/crane.jpg" alt="Mechanics Based Design – Crane Project">
-      <div class="card-title">Mechanics Based Design – Crane Project</div>
-    </div>
-    <div class="card">
-      <img src="images/oil.jpg" alt="Oil and Gas">
-      <div class="card-title">Oil and Gas</div>
-    </div>
-    <div class="card">
-      <img src="images/infrastructure.jpg" alt="Infrastructure">
-      <div class="card-title">Infrastructure</div>
-    </div>
-    <div class="card">
-      <img src="images/survey.jpg" alt="Professional Land Surveying">
-      <div class="card-title">Professional Land Surveying</div>
-    </div>
+    <a href="camera.html" style="text-decoration: none; color: inherit;">
+      <div class="card">
+        <img src="images/camera.jpg" alt="360 Underwater Camera System">
+        <div class="card-title">360 Underwater Camera System</div>
+      </div>
+    </a>
   </div>
 
 </body>
