--- a/camera.html
+++ b/camera.html
@@ -35,12 +35,15 @@
       align-items: flex-start;
       gap: 20px;
       margin: 30px 0;
+      flex-wrap: wrap;
     }
 
-    .figure-flex img {
-      max-width: 45%;
+    .figure-flex img,
+    .figure-flex video {
+      max-width: 100%;
       height: auto;
       border-radius: 4px;
+      flex: 1;
     }
 
     .figure-flex p {
@@ -49,30 +52,22 @@
       flex: 1;
     }
 
-    table {
-      width: 100%;
-      border-collapse: collapse;
-      margin-top: 20px;
-      font-size: 14px;
-    }
-
-    th, td {
-      padding: 8px;
-      border: 1px solid #ccc;
-    }
-
-    caption {
-      font-size: 14px;
-      font-weight: 300;
-      text-align: center;
-      margin-bottom: 10px;
-    }
-
     .caption {
       font-size: 13px;
       text-align: center;
       color: #555;
-      margin-bottom: 20px;
+      margin-top: 8px;
+    }
+
+    ul {
+      font-size: 15px;
+      line-height: 1.6;
+      padding-left: 20px;
+    }
+
+    video {
+      margin-top: 10px;
+      border-radius: 4px;
     }
   </style>
 </head>
@@ -81,12 +76,99 @@
   <h1>Underwater Camera System</h1>
   <h3>Project Timeline: August 2023 – May 2024</h3>
 
-  <p>The National Aquarium opened a Harbor Wetlands exhibit to recreate Baltimore’s historical salt marshes. To educate visitors about life under water, the aquarium asked our team to design an interactive exhibit that offers an immersive underwater view of the Harbor Wetlands.</p>
+  <p>The National Aquarium opened a Harbor Wetlands exhibit to recreate Baltimore’s historical salt marshes. 
+     To educate visitors about life under water, the aquarium asked our team to design an interactive exhibit that offers an immersive underwater view of the Harbor Wetlands.</p>
 
-  <h3>Design</h3>
+  <!-- COMPONENTS -->
+  <div class="figure-flex">
+    <div style="flex: 1;">
+      <h3>Components</h3>
+      <ul>
+        <li>1× Arduino Uno</li>
+        <li>1× HiLetgo L298N Motor Driver</li>
+        <li>1× NEMA11 stepper motor Linear Rail Actuator</li>
+        <li>1× Gikfun 2&quot; 4Ω 3W Speaker</li>
+        <li>1× 3D Printed Flexible Kicker Mechanism</li>
+        <li>1× Laser-Cut Game Base and Structure</li>
+        <li>1× LED Display</li>
+        <li>1× Goal Frame with printed goalkeeper</li>
+        <li>1× Breadboard</li>
+        <li>Jumper wires, resistors, capacitors</li>
+        <li>Power supply (5V for logic, 12V for actuator)</li>
+      </ul>
+    </div>
+    <div style="flex: 1;">
+      <img src="images/kicker_sketch.jpg" alt="Sketch of Proposed Idea">
+      <p class="caption">Figure 1. Sketch of Proposed Idea</p>
+    </div>
+  </div>
+
+  <!-- IDEATION -->
+  <h3>Ideation</h3>
+  <p>
+    The original goal for the desktop soccer game was to create a fully portable and compact system that could be easily set up and played anywhere. 
+    To test this, I initially constructed a standalone base using cardboard. By using the desk itself as the foundation for the game, I eliminated the need 
+    for a bulky base and reduced the total number of components, resulting in a cleaner, more minimal footprint.
+  </p>
+  <div class="figure-flex">
+    <div style="flex: 1;">
+      <img src="images/cardboard.jpg" alt="Cardboard Design">
+      <p class="caption">Figure 2. Cardboard Design</p>
+    </div>
+    <div style="flex: 1;">
+      <img src="images/final_desktop.jpg" alt="Final Design on Desktop">
+      <p class="caption">Figure 3. Final Design Using Desktop</p>
+    </div>
+  </div>
+
+  <!-- DESIGN -->
+  <h3>Design Process</h3>
+  <p>
+    The final design featured a 3D printed kicking mechanism and a ball holder base to keep the ball in place before each kick. 
+    After testing various materials, TPU (Thermoplastic Polyurethane) was chosen for its flexibility and durability. 
+    The kicker’s infill density was reduced to enhance its springiness and improve shot power. 
+    The goal was also 3D printed and designed to align with the actuator-driven goalkeeper. 
+    Field boundaries were laser cut from acrylic, allowing for quick assembly and a clean, portable design.
+  </p>
+
+  <!-- VIDEO 1 -->
+  <h3>Prototype Testing</h3>
+  <video width="100%" controls>
+    <source src="videos/prototype_tested.mp4" type="video/mp4">
+    Your browser does not support the video tag.
+  </video>
+  <p class="caption">Video 1. Prototype Tested</p>
+
+  <!-- ELECTRONICS -->
+  <h3>Electronics Added</h3>
+  <p>
+    To support two-player gameplay, the system included an electronic scoreboard powered by an Arduino Uno and displayed on an LCD screen. 
+    A custom 3D printed enclosure housed a set of mechanical buttons that allowed players to manually increase their score or reset it at any time. 
+    The buttons were wired to the Arduino, which updated the screen in real time. The modular casing made it easy to service or modify the electronics, 
+    and the Arduino-based system allowed for future expansion—such as adding automatic scoring or sound feedback.
+  </p>
+
+  <div class="figure-flex">
+    <div style="flex: 1;">
+      <video width="100%" controls>
+        <source src="videos/scoreboard_working.mp4" type="video/mp4">
+        Your browser does not support the video tag.
+      </video>
+      <p class="caption">Video 2. Working of Scoreboard</p>
+    </div>
+    <div style="flex: 1;">
+      <img src="images/scoreboard_circuit.jpg" alt="Circuit for Scoreboard">
+      <p class="caption">Figure 4. Circuit for Scoreboard</p>
+    </div>
+  </div>
+
+  <!-- WATERPROOF ENCLOSURE -->
+  <h3>Waterproof Camera Design</h3>
   <div class="figure-flex">
     <img src="images/camera_top.jpg" alt="Camera Top View">
-    <p><strong>Figure 5.</strong> We designed and tested a waterproof cylindrical (PVC) camera enclosure to ensure image clarity and water resistance in saltwater conditions. The cylindrical design used a 4” PVC tube with a sealed end cap, a TPU adapter with O-rings, and a transparent polymer window secured with corrosion-resistant hardware. Marine epoxy was applied for added sealing. Each enclosure was submerged in the harbor with internal cameras to evaluate image quality and waterproofing performance.</p>
+    <p><strong>Figure 5.</strong> We designed and tested a waterproof cylindrical (PVC) camera enclosure to ensure image clarity and water resistance in saltwater conditions. 
+    The cylindrical design used a 4” PVC tube with a sealed end cap, a TPU adapter with O-rings, and a transparent polymer window secured with corrosion-resistant hardware. 
+    Marine epoxy was applied for added sealing. Each enclosure was submerged in the harbor with internal cameras to evaluate image quality and waterproofing performance.</p>
   </div>
 
 </body>
