--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     }
 
     .card-title {
-      background-color: #CED2C0;
+      background-color: #CED2C0; /* sage green */
       color: #111;
       padding: 12px;
       font-weight: 600;
@@ -90,6 +90,11 @@
       text-align: center;
       line-height: 1.2;
       overflow-wrap: break-word;
+    }
+
+    a {
+      text-decoration: none;
+      color: inherit;
     }
   </style>
 </head>
@@ -107,10 +112,19 @@
   </div>
 
   <div class="grid">
-    <a href="camera.html" style="text-decoration: none; color: inherit;">
+    <!-- Underwater Camera System FIRST -->
+    <a href="camera.html">
       <div class="card">
         <img src="images/camera.jpg" alt="360 Underwater Camera System">
         <div class="card-title">360 Underwater Camera System</div>
+      </div>
+    </a>
+
+    <!-- Mechatronics Soccer Game SECOND -->
+    <a href="soccer.html">
+      <div class="card">
+        <img src="images/soccer_thumbnail.jpg" alt="Mechatronics Soccer Game">
+        <div class="card-title">Mechatronics Soccer Game</div>
       </div>
     </a>
   </div>
