--- a/soccer.html
+++ b/soccer.html
@@ -157,7 +157,10 @@
   </p>
   <div class="figure-flex">
     <div>
-      <img src="images/soccer_scoreboard_front.jpg" alt="Scoreboard">
+      <video controls>
+        <source src="videos/scoreboard_working.mp4" type="video/mp4">
+        Your browser does not support the video tag.
+      </video>
       <p class="caption">Video 2. Working of Scoreboard</p>
     </div>
     <div>
@@ -165,6 +168,21 @@
       <p class="caption">Figure 4. Circuit for Scoreboard</p>
     </div>
   </div>
+
+  <!-- FINAL DESIGN WITH LINEAR ACTUATOR -->
+  <p>
+    To add a dynamic challenge to the game, a linear actuator was installed behind the goalpost, 
+    controlled by a motor driver and programmed to move the goalkeeper back and forth at random intervals. 
+    This movement made scoring more difficult and added an unpredictable, interactive element to each play. 
+    The actuator was synchronized with the rest of the system using the Arduino, ensuring reliable and responsive motion.
+  </p>
+  <div class="figure-flex">
+    <video controls>
+      <source src="videos/actuator_goalkeeper.mp4" type="video/mp4">
+      Your browser does not support the video tag.
+    </video>
+  </div>
+  <p class="caption">Video 3. Final Design with Linear Actuator</p>
 
 </body>
 </html>
