--- a/soccer.html
+++ b/soccer.html
@@ -135,17 +135,14 @@
     Field boundaries were laser cut from acrylic, allowing for quick assembly and a clean, portable design.
   </p>
 
+<video controls style="width: 100%;">
+  <source src="videos/soccer_test.mp4" type="video/mp4">
+  Your browser does not support the video tag.
+</video>
+<p class="caption">Video 1. Prototype Tested</p>
+  
   <!-- VIDEO AND ELECTRONICS -->
   <h3>Electronics Added</h3>
-  <div class="figure-flex">
-    <div>
-      <video controls>
-        <source src="videos/soccer_test.mp4" type="video/mp4">
-        Your browser does not support the video tag.
-      </video>
-      <p class="caption">Video 1. Prototype Tested</p>
-    </div>
-  </div>
 
   <p>
     To support two-player gameplay, the system included an electronic scoreboard powered by an Arduino Uno 
