--- a/soccer.html
+++ b/soccer.html
@@ -122,16 +122,16 @@
       <li>Jumper wires, resistors, capacitors</li>
       <li>Power supply (5V for logic, 12V for actuator)</li>
     </ul>
-    <img src="images/sketch.png" alt="Sketch">
+    <img src="images/cardboard_design.jpg" alt="Sketch">
   </div>
 
   <div class="side-by-side">
     <figure>
-      <img src="images/cardboard_design.png" alt="Cardboard Design">
+      <img src="images/cardboard_design.jpg" alt="Cardboard Design">
       <figcaption>Figure 2. Cardboard Design</figcaption>
     </figure>
     <figure>
-      <img src="images/final_frame.png" alt="Final Design">
+      <img src="images/final_design_frame.jpg" alt="Final Design">
       <figcaption>Figure 3. Final Design Using Desktop</figcaption>
     </figure>
   </div>
@@ -148,7 +148,7 @@
      quick assembly and a clean, portable design.</p>
 
   <video class="video-full" controls>
-    <source src="videos/prototype.mp4" type="video/mp4">
+    <source src="videos/soccer_test.mp4" type="video/mp4">
     Your browser does not support the video tag.
   </video>
   <div class="caption">Video 1. Prototype Tested</div>
