--- a/soccer.html
+++ b/soccer.html
@@ -122,8 +122,10 @@
       <li>Jumper wires, resistors, capacitors</li>
       <li>Power supply (5V for logic, 12V for actuator)</li>
     </ul>
-    <img src="images/cardboard_design.jpg" alt="Sketch">
-  </div>
+  <img src="images/soccer_sketch.png" alt="Sketch of Proposed Idea" style="width: 100%; max-width: 675px; height: auto;" />
+  <div class="caption">Figure 1. Sketch of Proposed Idea</div>
+</div>
+
 
   <div class="side-by-side">
     <figure>
