--- a/soccer.html
+++ b/soccer.html
@@ -108,7 +108,8 @@
      It provided a hands-on opportunity to integrate design, fabrication, and programming skills in a playful, engaging format.</p>
 
   <h3>Components</h3>
-  <div class="figure-flex">
+<div class="figure-flex">
+  <div style="flex: 1;">
     <ul>
       <li>1× Arduino Uno</li>
       <li>1× HiLetgo L298N Motor Driver</li>
@@ -122,8 +123,11 @@
       <li>Jumper wires, resistors, capacitors</li>
       <li>Power supply (5V for logic, 12V for actuator)</li>
     </ul>
-  <img src="images/soccer_sketch.png" alt="Sketch of Proposed Idea" style="width: 100%; max-width: 450px; height: auto;" />
-  <div class="caption">Figure 1. Sketch of Proposed Idea</div>
+  </div>
+  <div style="flex: 1; text-align: center;">
+    <img src="images/soccer_sketch.png" alt="Sketch of Proposed Idea" style="width: 100%; max-width: 450px; height: auto;" />
+    <div class="caption">Figure 1. Sketch of Proposed Idea</div>
+  </div>
 </div>
 
 
