--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
     <!-- Mechatronics Soccer Game SECOND -->
     <a href="soccer.html">
       <div class="card">
-        <img src="images/soccer_sketch.png" alt="Mechatronics Soccer Game">
+        <img src="images/final_design_frame.jpg" alt="Mechatronics Soccer Game">
         <div class="card-title">Mechatronics Soccer Game</div>
       </div>
     </a>
