--- a/soccer.html
+++ b/soccer.html
@@ -107,7 +107,7 @@
      The game simulates a mini soccer field where a user-controlled kicker competes against a moving goalkeeper, mounted on a linear actuator. 
      It provided a hands-on opportunity to integrate design, fabrication, and programming skills in a playful, engaging format.</p>
 
-  <h3>Components</h3>
+<h3>Components</h3>
 <div class="figure-flex">
   <div style="flex: 1;">
     <ul>
@@ -125,8 +125,10 @@
     </ul>
   </div>
   <div style="flex: 1; text-align: center;">
-    <img src="images/soccer_sketch.png" alt="Sketch of Proposed Idea" style="width: 100%; max-width: 450px; height: auto;" />
-    <div class="caption">Figure 1. Sketch of Proposed Idea</div>
+    <div>
+      <img src="images/soccer_sketch.png" alt="Sketch of Proposed Idea" style="max-width: 100%; height: auto;" />
+      <div class="caption">Figure 1. Sketch of Proposed Idea</div>
+    </div>
   </div>
 </div>
 
