--- a/camera.html
+++ b/camera.html
@@ -4,107 +4,83 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Underwater Camera System</title>
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;600&display=swap" rel="stylesheet">
   <style>
     body {
-      font-family: 'Montserrat', sans-serif;
-      padding: 30px;
-      background-color: #fff;
-      max-width: 900px;
-      margin: auto;
-      color: #111;
-    }
-
-    h1, h2 {
-      font-weight: 600;
-    }
-
-    h3 {
-      font-weight: 500;
-      margin-top: 30px;
-    }
-
-    p {
-      font-size: 16px;
+      font-family: Arial, sans-serif;
+      margin: 40px;
       line-height: 1.6;
-      margin-top: 10px;
+      max-width: 1000px;
+      margin-left: auto;
+      margin-right: auto;
     }
-
-    .subtitle {
-      color: #004080;
-      font-weight: 600;
-      font-size: 18px;
-      margin-top: 10px;
+    h1, h2, h3 {
+      color: #222;
     }
-
-    em {
+    .caption {
       font-style: italic;
-      display: block;
-      margin-top: 10px;
-      color: #444;
-    }
-
-    .image-caption {
-      font-size: 14px;
       text-align: center;
-      color: #555;
       margin-top: 8px;
+      font-size: 0.95em;
     }
-
-    img {
-      width: 100%;
+    .image-row {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 10px;
+      justify-content: center;
+      margin-top: 10px;
+    }
+    .image-row img {
       max-width: 100%;
       height: auto;
-      border-radius: 6px;
-      margin-top: 20px;
     }
-
-    .figure-flex {
-      display: flex;
-      flex-direction: row;
-      gap: 20px;
-      flex-wrap: wrap;
-      margin-top: 30px;
-      align-items: flex-start;
+    .image-half {
+      width: 48%;
     }
-
-    .figure-flex img {
-      flex: 1 1 300px;
+    .image-full {
+      width: 100%;
     }
-
-    .figure-flex p {
-      flex: 1 1 300px;
-      font-size: 15px;
+    .text-half {
+      width: 48%;
     }
-
   </style>
 </head>
 <body>
 
   <h1>Underwater Camera System</h1>
-  <div class="subtitle">Project Timeline: August 2023 – May 2024</div>
+  <h2 style="color:#1f64b1;">Project Timeline: August 2023 – May 2024</h2>
 
-  <p>The National Aquarium opened a Harbor Wetlands exhibit to recreate Baltimore’s historical salt marshes. 
-     To educate visitors about life under water, the aquarium asked our team to design an interactive exhibit that offers an immersive underwater view of the Harbor Wetlands.</p>
+  <p>The National Aquarium opened a Harbor Wetlands exhibit to recreate Baltimore’s historical salt marshes. To educate visitors about life under water, the aquarium asked our team to design an interactive exhibit that offers an immersive underwater view of the Harbor Wetlands.</p>
 
   <h3>Background</h3>
-  <em>I led a team of 2 Mechanical Engineers and 2 Electrical Engineers.</em>
-
-  <p>Our final design involved an underwater camera system divided into two parts. 
-     The “above water” component described the display and the interactive elements that visitors would control and physically interact with. 
-     The “underwater” component described the camera, enclosure, and structural elements that would capture and send imagery to the above water display.</p>
+  <p><i>I led a team of 2 Mechanical Engineers and 2 Electrical Engineers.</i></p>
+  <p>Our final design involved an underwater camera system divided into two parts. The “above water” component described the display and the interactive elements that visitors would control and physically interact with. The “underwater” component described the camera, enclosure, and structural elements that would capture and send imagery to the above water display.</p>
 
   <h3>Ideation</h3>
-
-  <img src="camera_sketches.jpg" alt="Camera sketches">
-  <div class="image-caption">Figure 4: Concept sketches showing the internal and external components of an underwater camera unit.</div>
-
-  <div class="figure-flex">
-    <img src="camera_assembly.jpg" alt="Camera enclosure photo">
-    <p><strong>Figure 5.</strong> We designed and tested a waterproof cylindrical (PVC) camera enclosure to ensure image clarity and water resistance in saltwater conditions. 
-      The cylindrical design used a 4” PVC tube with a sealed end cap, a TPU adapter with O-rings, and a transparent polymer window secured with corrosion-resistant hardware. 
-      Marine epoxy was applied for added sealing. Each enclosure was submerged in the harbor with internal cameras to evaluate image quality and waterproofing performance.</p>
+  <div class="image-row">
+    <img class="image-full" src="images/concept_sketches.jpg" alt="Sketches">
   </div>
+  <div class="caption">Figure 4: Concept sketches showing the internal and external components of an underwater camera unit.</div>
+
+  <div class="image-row">
+    <img class="image-half" src="images/pvc_camera.jpg" alt="PVC Camera">
+    <div class="text-half">
+      <p><b>Figure 5.</b> We designed and tested a waterproof cylindrical (PVC) camera enclosure to ensure image clarity and water resistance in saltwater conditions. The cylindrical design used a 4” PVC tube with a sealed end cap, a TPU adapter with O-rings, and a transparent polymer window secured with corrosion-resistant hardware. Marine epoxy was applied for added sealing. Each enclosure was submerged in the harbor with internal cameras to evaluate image quality and waterproofing performance.</p>
+    </div>
+  </div>
+
+  <p>We designed an underwater camera system using a clear cast acrylic tube (11.8” length, 4” ID, 4.5” OD) sealed with anodized aluminum end caps. The bottom cap is solid, while the top cap features five openings—four sealed with pressure relief valves and one fitted with a WetLink Penetrator for a waterproof wire pass-through. The enclosure houses a 360° Ricoh Theta V camera and is secured to a stable, table-like structure using a custom 3D-printed ABS clamp. This structure clips into the fibergrate base of the wetland channel to prevent movement.</p>
+
+  <div class="image-row">
+    <img class="image-half" src="images/wetlink_penetrator.jpg" alt="Wetlink Penetrator">
+    <div class="caption">Figure 6: Finalized CAD design in image on the left and Wetland Penetrator on the right.</div>
+    
+    <img class="image-half" src="images/cad_mount.jpg" alt="CAD Mount">
+  </div>
+
+  <div class="image-row">
+    <img class="image-full" src="images/fingerbot_mount_combined.jpg" alt="Fingerbot Mount Assembly">
+  </div>
+  <div class="caption">Figure 7. In order to properly position the camera within the capsule (i.e., maximize the view of the underwater while minimizing the view of the capsule, endcaps, supports, etc.) we developed a 3D printed mount that the camera rests upon inside the capsule. The bottom disk houses a spot to place the FingerBot, an automatic button presser that can be controlled via the Smart Life app through Bluetooth. The app allows users to set an assigned schedule for the FingerBot so that it will turn the camera on at a designated time, then once again turn it off at a later set time.</div>
 
 </body>
 </html>
