--- a/camera.html
+++ b/camera.html
@@ -7,11 +7,9 @@
   <style>
     body {
       font-family: Arial, sans-serif;
-      margin: 40px;
-      line-height: 1.6;
+      margin: 40px auto;
       max-width: 1000px;
-      margin-left: auto;
-      margin-right: auto;
+      line-height: 1.6;
     }
     h1, h2, h3 {
       color: #222;
@@ -71,16 +69,15 @@
   <p>We designed an underwater camera system using a clear cast acrylic tube (11.8” length, 4” ID, 4.5” OD) sealed with anodized aluminum end caps. The bottom cap is solid, while the top cap features five openings—four sealed with pressure relief valves and one fitted with a WetLink Penetrator for a waterproof wire pass-through. The enclosure houses a 360° Ricoh Theta V camera and is secured to a stable, table-like structure using a custom 3D-printed ABS clamp. This structure clips into the fibergrate base of the wetland channel to prevent movement.</p>
 
   <div class="image-row">
-    <img class="image-half" src="images/wetlink_penetrator.jpg" alt="Wetlink Penetrator">
-    <div class="caption">Figure 6: Finalized CAD design in image on the left and Wetland Penetrator on the right.</div>
-    
-    <img class="image-half" src="images/cad_mount.jpg" alt="CAD Mount">
+    <img class="image-full" src="images/weblink_penetrator.jpg" alt="Wetlink Penetrator & CAD Assembly">
   </div>
+  <div class="caption">Figure 6: Finalized CAD design in image on the left and WetLink Penetrator on the right.</div>
 
   <div class="image-row">
-    <img class="image-full" src="images/fingerbot_mount_combined.jpg" alt="Fingerbot Mount Assembly">
+    <img class="image-full" src="images/cad_mount.jpg" alt="CAD Mount">
+    <img class="image-half" src="images/assembled_mount.jpg" alt="Assembled Mount Photo">
   </div>
-  <div class="caption">Figure 7. In order to properly position the camera within the capsule (i.e., maximize the view of the underwater while minimizing the view of the capsule, endcaps, supports, etc.) we developed a 3D printed mount that the camera rests upon inside the capsule. The bottom disk houses a spot to place the FingerBot, an automatic button presser that can be controlled via the Smart Life app through Bluetooth. The app allows users to set an assigned schedule for the FingerBot so that it will turn the camera on at a designated time, then once again turn it off at a later set time.</div>
+  <div class="caption">Figure 7. In order to properly position the camera within the capsule (i.e., maximize the view of the underwater while minimizing the view of the capsule, endcaps, supports, etc.) we developed a 3D printed mount that the camera rests upon inside the capsule. The bottom disk houses a spot to place the FingerBot, an automatic button presser that can be controlled via the Smart Life app through Bluetooth. The app offers the capability for users to set an assigned schedule for the FingerBot so that it will turn the camera on at a designated time, then once again turn it off at a later set time.</div>
 
 </body>
 </html>
