--- a/camera.html
+++ b/camera.html
@@ -65,7 +65,7 @@
   <p>We designed an underwater camera system using a clear cast acrylic tube (11.8” length, 4” ID, 4.5” OD) sealed with anodized aluminum end caps. The bottom cap is solid, while the top cap features five openings—four sealed with pressure relief valves and one fitted with a WetLink Penetrator for a waterproof wire pass-through. The enclosure houses a 360° Ricoh Theta V camera and is secured to a stable, table-like structure using a custom 3D-printed ABS clamp. This structure clips into the fibergrate base of the wetland channel to prevent movement.</p>
 
   <div class="image-row">
-    <img class="image-full" src="images/weblink_penetrator.jpg" alt="Wetlink Penetrator & CAD Assembly">
+    <img class="image-full" src="images/wetlink_penetrator.jpg" alt="Wetlink Penetrator & CAD Assembly">
   </div>
   <div class="caption">Figure 6: Finalized CAD design in image on the left and WetLink Penetrator on the right.</div>
 
@@ -73,7 +73,7 @@
     <img class="image-65" src="images/cad_mount.jpg" alt="CAD Mount Render">
     <img class="image-35" src="images/assembled_mount.jpg" alt="Assembled Mount Photo">
   </div>
-  <div class="caption">Figure 7. In order to properly position the camera within the capsule (i.e., maximize the view of the underwater while minimizing the view of the capsule, endcaps, supports, etc.) we developed a 3D printed mount that the camera rests upon inside the capsule. The bottom disk houses a spot to place the FingerBot, an automatic button presser that can be controlled via the Smart Life app through Bluetooth. The app offers the capability for users to set an assigned schedule for the FingerBot so that it will turn the camera on at a designated time, then once again turn it off at a later set time.</div>
+  <div class="caption">Figure 7. In order to properly position the camera within the capsule (i.e., maximize the view of the underwater while minimizing the view of the capsule, endcaps, supports, etc.) we developed a 3D printed mount that the camera rests upon inside the capsule. The bottom disk houses a spot to place the FingerBot, an automatic button presser that can be controlled via the Smart Life app through Bluetooth. The app offers the capability for users to set assigned schedules for the FingerBot so that it will turn the camera on at a designated time, then once again turn it off at a later time.</div>
 
   <h3>Final Design</h3>
   <p>To prototype the interactive display, we built a wooden frame using 2×4s and a TV mount, focusing on user testing to determine ideal viewing dimensions. The frame included an adjustable-height table and side/top plywood panels to reduce glare. A joystick was mounted in a position that mimicked its final intended placement.</p>
