--- a/camera.html
+++ b/camera.html
@@ -39,7 +39,9 @@
   </style>
 </head>
 <body>
-
+  <div style="position: fixed; top: 20px; left: 20px; z-index: 1000;">
+    <a href="index.html" style="text-decoration: none; font-weight: bold; font-size: 16px; color: #1f64b1;">← Projects</a>
+  </div>
   <h1>Underwater Camera System</h1>
   <h2 style="color:#1f64b1;">Project Timeline: August 2023 – May 2024</h2>
 
