--- a/soccer.html
+++ b/soccer.html
@@ -99,7 +99,9 @@
   </style>
 </head>
 <body>
-
+  <div style="position: fixed; top: 20px; left: 20px; z-index: 1000;">
+    <a href="index.html" style="text-decoration: none; font-weight: bold; font-size: 16px; color: #1f64b1;">← Projects</a>
+  </div>
   <h1>Desktop Soccer Game</h1>
   <h3>Project Timeline: March 2024 – May 2024</h3>
 
