--- a/index.html
+++ b/index.html
@@ -129,5 +129,12 @@
     </a>
   </div>
 
+    <a href="solar_blinds.html">
+      <div class="card">
+      <img class="project-image" src="images/solar_blinds.jpg" alt="Solar Powered Blinds Operator" />
+      <div class="card-title">Solar Powered Blinds Operator</div>
+    </a>
+  </div>
+  
 </body>
 </html>
