--- a/solar_blinds.html
+++ b/solar_blinds.html
@@ -83,5 +83,20 @@
     </div>
   </div>
 
+<h3>Final Design</h3>
+<p>A 3D printed casing was designed to neatly house the Arduino, IR receiver, and supporting circuitry. Additionally, a custom servo attachment was created to securely connect the servomotor to the blinds, ensuring smooth and consistent operation.</p>
+
+<div class="image-row">
+  <img src="images/final_design_board.jpg" alt="Final Electronics Mount">
+  <img src="images/final_design_solar.jpg" alt="Solar Panel Unit">
+</div>
+<div class="caption">Figure 2. The Final Design for the Blinds Operator</div>
+
+<video class="image-full" controls>
+  <source src="videos/blinds_demo.mp4" type="video/mp4">
+  Your browser does not support the video tag.
+</video>
+<div class="caption">Video 1. Demonstration of the Blinds Operator</div>
+  
 </body>
 </html>
